# FEC_LoRa

./: .gitignore  CMakeLists.txt
data/: decoded_incorrect.txt  encoded_correct.txt  encoded_correct_image.txt  encoded_image_no_id.txt  encoded_incorrect.txt  sample_data.txt
include/: LoRaModule.hpp  SerialPort.hpp
src/: FEC_base64.cpp  FEC_image_decode.cpp  FEC_image_encode.cpp  FEC_less.cpp  FEC_test1.cpp  LoRaModule.cpp  SerialPort.cpp  image_decode_non.cpp  image_encode_non.cpp  no_id.cpp  txt_decode.cpp
